[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/draw/draw_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/theme/texno_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/fps/fps_counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screens/draw_screen.gd" type="Script" id=4]
[ext_resource path="res://wopvault/wopvault_request.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/react_bar/react_bar.tscn" type="PackedScene" id=6]

[node name="DrawScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="DrawArea" parent="." instance=ExtResource( 1 )]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSCounter" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 13.0
margin_top = 5.0
margin_right = 54.0
margin_bottom = 50.0

[node name="ReactBar" parent="." instance=ExtResource( 6 )]

[node name="WoPVaultRequest" parent="." instance=ExtResource( 5 )]
